tests/codegen/fail/interface/struct/attr_no_fields.rs
use coasys_juniper::graphql_interface;

#[graphql_interface]
struct Character {}

fn main() {}
